--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "faunadb": "^2.13.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-netlify-identity": "^0.2.4",
     "react-scripts": "3.4.1"
   },
   "scripts": {
